<resources>
    <string name="app_name">Yep</string>
    <string name="aMenu">menu_a</string>
    <string name="bMenu">menu_b</string>
    <string name="title_splash">YEP!</string>
    <string name="subtitle_splash">DO I KNOW YOU?</string>
    <string name="user_login">Username</string>
    <string name="userSubtitle_login">Password</string>
    <string name="btn_login">Login</string>
    <string name="title_Login">YEP!</string>
    <string name="forget_password">have an account? SIGN UP here!</string>
</resources>
