<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.javierbravo.yep.Login"
    android:background="@color/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:id="@+id/linearLayout">

        <EditText
            android:id="@+id/usernameField"
            android:hint="@string/user_login"
            style="@style/usernameField" />

        <EditText
            android:id="@+id/passwordField"
            android:hint="@string/userSubtitle_login"
            style="@style/passwordField" />

        <Button
            android:text="@string/btn_login"
            android:id="@+id/btn_Login"
            style="@style/btnLogin" />
    </LinearLayout>

    <TextView
        android:text="@string/title_Login"
        android:id="@+id/title_Log"
        style="@style/titleLogin" />

    <TextView
        android:text="@string/subtitle_splash"
        android:id="@+id/subtitle_Log"
        style="@style/subtitleLogin" />

    <TextView
        android:text="@string/forget_password"
        android:id="@+id/forgetPass"
        style="@style/forgetLogin" />
</RelativeLayout>




